# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  a.out  bmp.cpp  bmp.hpp  main.cpp  makefile  mandelbrot.cpp  mandelbrot.hpp
.github/workflows/: cmake.yml
gui/: CMakeLists.txt  anti_aliasing.cpp  anti_aliasing.h  bmp_canvas.cpp  bmp_canvas.h  show-main.cpp  utils.h
gui/test/: CMakeLists.txt  anti_aliasing_test.cpp  utils_test.cpp
